--- a/src/css/app.less
+++ b/src/css/app.less
@@ -7,7 +7,8 @@
   --f7-theme-color-change-text: #c87137;
   --color-subtitle-text: #9b4811;
 
-  --f7-theme-color: #5e3e29;
+  //--f7-theme-color: #5e3e29;
+  --f7-theme-color: #413127;
   --f7-theme-color-rgb: 94, 62, 41;
   --f7-theme-color-shade: #422b1d;
   --f7-toggle-inactive-color: #504d4b20;
@@ -163,6 +164,9 @@
   --f7-theme-color-rgb: 200, 113, 55;
   --f7-theme-color-shade: #C15815;
   --f7-theme-color-tint: #C88C60;
+}
+.range__margin-bottom {
+  margin-bottom: 0.6rem;
 }
 
 /* .color-deeporange {
