Разработка страницы "Ещё"

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -7,8 +7,11 @@
   --f7-theme-color-change-text: #c87137;
   --color-subtitle-text: #9b4811;
 
-  //--f7-theme-color: #5e3e29;
-  --f7-theme-color: #413127;
+  --f7-theme-color: #5e3e29;
+  //--f7-theme-color: #413127;
+  //--f7-theme-color: #443e29;
+  //--f7-theme-color: #404040;
+  //--f7-theme-color: #6d6d6d;
   --f7-theme-color-rgb: 94, 62, 41;
   --f7-theme-color-shade: #422b1d;
   --f7-toggle-inactive-color: #504d4b20;
@@ -169,6 +172,12 @@
   margin-bottom: 0.6rem;
 }
 
+.list-input__label {
+  font-size: 14px;
+}
+.list-input__label-text_color {
+  color: var(--color-subtitle-text);
+}
 /* .color-deeporange {
   --f7-theme-color: #ff6b22;
   --f7-theme-color-rgb: 255, 107, 34;
