System Update pages develope

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -178,6 +178,11 @@
 .list-input__label-text_color {
   color: var(--color-subtitle-text);
 }
+
+.block-header_text {
+  color: var(--f7-card-header-text-color);
+  font-size: var(--f7-card-header-font-size);
+}
 /* .color-deeporange {
   --f7-theme-color: #ff6b22;
   --f7-theme-color-rgb: 255, 107, 34;
