--- a/src/css/fontello-715e6269/css/fontello.css
+++ b/src/css/fontello-715e6269/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?80760378');
-  src: url('../font/fontello.eot?80760378#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?80760378') format('woff2'),
-       url('../font/fontello.woff?80760378') format('woff'),
-       url('../font/fontello.ttf?80760378') format('truetype'),
-       url('../font/fontello.svg?80760378#fontello') format('svg');
+  src: url('../font/fontello.eot?89881161');
+  src: url('../font/fontello.eot?89881161#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?89881161') format('woff2'),
+       url('../font/fontello.woff?89881161') format('woff'),
+       url('../font/fontello.ttf?89881161') format('truetype'),
+       url('../font/fontello.svg?89881161#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?80760378#fontello') format('svg');
+    src: url('../font/fontello.svg?89881161#fontello') format('svg');
   }
 }
 */
@@ -57,9 +57,9 @@
  
 .icon-gps:before { content: '\e800'; } /* '' */
 .icon-accum:before { content: '\e801'; } /* '' */
+.icon-info-circled:before { content: '\e802'; } /* '' */
 .icon-dropfill:before { content: '\e803'; } /* '' */
 .icon-wifi-logo:before { content: '\e807'; } /* '' */
-.icon-wrench:before { content: '\e80c'; } /* '' */
 .icon-ellipsis-outline:before { content: '\e813'; } /* '' */
 .icon-telemetry-outline:before { content: '\e81c'; } /* '' */
 .icon-hand:before { content: '\e82d'; } /* '' */
@@ -79,3 +79,4 @@
 .icon-pump:before { content: '\e83f'; } /* '' */
 .icon-repeat:before { content: '\e841'; } /* '' */
 .icon-sensor:before { content: '\e842'; } /* '' */
+.icon-light-fill:before { content: '\e853'; } /* '' */
