--- a/src/css/app.less
+++ b/src/css/app.less
@@ -68,9 +68,18 @@
 }
 
 /* Your app custom styles here */
+.hidden {
+  display: none !important;
+}
+
 .page {
   background-color: var( --f7-theme-color-bg-color)
 }
+
+.margin-top__10px {
+  margin-top: 10px;
+}
+
 .navbar-title {}
 .navbar-title__ver {
   font-size: 12px;
@@ -182,6 +191,11 @@
 .block-header_text {
   color: var(--f7-card-header-text-color);
   font-size: var(--f7-card-header-font-size);
+}
+
+.block-title-noconnection__text {
+  color: red;
+  font-size: 16px;
 }
 /* .color-deeporange {
   --f7-theme-color: #ff6b22;
