--- a/src/css/fontello-7c80ef33/css/fontello-codes.css
+++ b/src/css/fontello-7c80ef33/css/fontello-codes.css
@@ -23,3 +23,5 @@
 .icon-pump:before { content: '\e83f'; } /* '' */
 .icon-repeat:before { content: '\e841'; } /* '' */
 .icon-sensor:before { content: '\e842'; } /* '' */
+.icon-light-fill:before { content: '\e853'; } /* '' */
+.icon-service:before { content: '\e883'; } /* '' */
