--- a/src/css/fontello-7c80ef33/css/fontello.css
+++ b/src/css/fontello-7c80ef33/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?34861543');
-  src: url('../font/fontello.eot?34861543#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?34861543') format('woff2'),
-       url('../font/fontello.woff?34861543') format('woff'),
-       url('../font/fontello.ttf?34861543') format('truetype'),
-       url('../font/fontello.svg?34861543#fontello') format('svg');
+  src: url('../font/fontello.eot?15648401');
+  src: url('../font/fontello.eot?15648401#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?15648401') format('woff2'),
+       url('../font/fontello.woff?15648401') format('woff'),
+       url('../font/fontello.ttf?15648401') format('truetype'),
+       url('../font/fontello.svg?15648401#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?34861543#fontello') format('svg');
+    src: url('../font/fontello.svg?15648401#fontello') format('svg');
   }
 }
 */
@@ -79,3 +79,5 @@
 .icon-pump:before { content: '\e83f'; } /* '' */
 .icon-repeat:before { content: '\e841'; } /* '' */
 .icon-sensor:before { content: '\e842'; } /* '' */
+.icon-light-fill:before { content: '\e853'; } /* '' */
+.icon-service:before { content: '\e883'; } /* '' */
