sync fo work PC

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -197,6 +197,13 @@
   color: red;
   font-size: 16px;
 }
+
+.nav-title-noconnection__text {
+  color: rgb(248, 66, 66);
+  font-size: 18px;
+  font-weight: 700;
+  margin-right: 0.5rem;
+}
 /* .color-deeporange {
   --f7-theme-color: #ff6b22;
   --f7-theme-color-rgb: 255, 107, 34;
