--- a/src/css/app.less
+++ b/src/css/app.less
@@ -79,6 +79,9 @@
 .margin-top__10px {
   margin-top: 10px;
 }
+.margin-top__20px {
+  margin-top: 20px;
+}
 
 .navbar-title {}
 .navbar-title__ver {
