new feature: update and pump

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -4,6 +4,7 @@
   --f7-theme-color-bg-tint-color: #ecece060;
   --f7-tabbar-icon-size: 20px;
   --f7-tabbar-label-font-size: 13px;
+  --f7-block-title-font-size: 18px;
   --f7-theme-color-change-text: #c87137;
   --color-subtitle-text: #9b4811;
 
@@ -206,6 +207,10 @@
   font-size: 18px;
   font-weight: 700;
   margin-right: 0.5rem;
+}
+
+.block-title-text_settings {
+  font-size: 18px;
 }
 /* .color-deeporange {
   --f7-theme-color: #ff6b22;
