--- a/src/css/app.less
+++ b/src/css/app.less
@@ -151,6 +151,7 @@
 .card-footer-tele {
   justify-content: space-around;
   --card-footer-icon-size: 24px;
+  --card-footer-text-size: 16px;
   background-color: var(--theme-bg-color-light);
 }
 .card-footer-tele__icon-text {
@@ -161,6 +162,8 @@
   margin-top: calc(var(--card-footer-icon-size)/3);
   //margin-right: 0.4rem;
   color: var(--color-subtitle-text);
+  font-weight: bolder;
+  font-size: var(--card-footer-text-size);
 }
 .card-footer-tele__icon {
   margin-right: 0.2rem;
