fix bugs telemetry. design

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -94,6 +94,9 @@
   font-weight: normal;
   background-color: var(--theme-bg-color-light);
 }
+.home-list-item__title{
+  font-weight: bolder;
+}
 .home-list-item__subtitle-text_color{
   color: #9b4811;
   font-size: 13px;
@@ -147,6 +150,7 @@
 /* card-footer-tele */
 .card-header-tele {
   background-color: var(--theme-bg-color-light);
+  font-weight: bolder;
 }
 .card-footer-tele {
   justify-content: space-around;
